--- a/Museum-App/src/main/resources/application.properties
+++ b/Museum-App/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ip_2022
-spring.datasource.username=ip_user
-spring.datasource.password=sigurnost
+spring.datasource.username=*****
+spring.datasource.password=****
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 server.port=8081
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sni.dms.bane@gmail.com
-spring.mail.password=snidmsbane1
+spring.mail.password=******
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.max-file-size = 30MB
